<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    android:layout_height="match_parent"
    tools:context=".feature.fragment.FinishLearningFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_centerVertical="true"
                android:src="@drawable/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="24sp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black"
            android:text="@string/congrats"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/black"
            android:text="@string/congratulations_on_learning_all_the_new_words"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/tinted_ice"
            android:src="@drawable/cute_astronat_04_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:layout_marginTop="56dp"
            android:background="@drawable/custom_button_take_quiz"
            android:fontFamily="@font/opensans_semibold"
            android:id="@+id/btn_take_quiz"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/take_the_quiz_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>